Se actualiza customer and movements
