# customer/src/main/resources/openapi.yaml
@@ -16,6 +16,18 @@ paths:
       responses:
         '201':
           description: Customer created
+    get:
+      summary: Get all customers
+      operationId: getAllCustomers
+      responses:
+        '200':
+          description: List of customers
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/CustomerResponse'
 
   /api/v1/customers/{customer_id}:
     get:
